Fix phone number color on safari mobile

--- a/modules/asset/ui/src/scss/_layout.scss
+++ b/modules/asset/ui/src/scss/_layout.scss
@@ -458,6 +458,7 @@ main,
       .info {
         margin-left: 100px;
         color: #000000;
+        -webkit-text-fill-color: #000000;
       }
 
       .links-wrapper {
